# feed-ngk

./: main.py  pyproject.toml  weneedfeed.yml
.github/workflows/: static.yml
output/: feed-ngk-ranking-daily.xml  feed-ngk-recently.xml  index.html
