[tool.poetry]
name = "feed-ngk"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "feed_ngk"}]

[tool.poetry.dependencies]
python = "^3.11"
feedgenerator = "^2.1.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
selenium = "4.10.0"
webdriver-manager = "3.8.6"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
